Fix discover spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -277,12 +277,12 @@ div.future {
 }
 
 div.future h1 {
-  font-size: 36px;
+  font-size: 72px;
   text-align: center;
 }
 
 div.future p {
-  font-size: 16px;
+  font-size: 42px;
   text-align: center;
   margin-top: 20px;
 }
@@ -320,6 +320,7 @@ input.search {
   position: absolute;
   right: 200px;
   top: 5px;
+  padding-left: 20px;
   background-color: white;
   height: 50px;
   border-radius: 5px;
@@ -349,8 +350,9 @@ ul.categories-list li {
   border: 1px solid #ccc;
   float: left;
   width: 100px;
+  padding: 0 10px;
   height: 60px;
-  margin: 0 40px 40px 40px;
+  margin: 0 0 40px 0;
   text-align: center;
   line-height: 60px;
   cursor: pointer;
